# sql2text

./: README.md  USAGE.md  buenos_aires_today_summary.txt  demo_uvx.py  pyproject.toml  run_example.py  setup.sh  test_setup.py
src/sql2text/: Notes  __init__.py  agent-research-sdk.py  agent_research.py  agent_weather.py  agent_weather_agentsdk.py  chennai-results.md  example.py  example_linkup.py  presentation.md  safe-places-in-chennai  websites.md
